Fixed Spacing Mobile

--- a/style.css
+++ b/style.css
@@ -259,6 +259,5 @@ body {
         padding: 3vw 2vw;
         border-radius: 3vw;
         font-size: 4vw;
-        margin: 0;
     }
 }
